generator client {
  provider      = "prisma-client"
  output        = "../generated/prisma"
  binaryTargets = ["native", "linux-musl-openssl-3.0.x"]
}

datasource db {
  provider = "mysql"
}

// ============================================================
// AUTH & USER
// ============================================================

model User {
  id                String              @id
  name              String              @db.Text
  email             String              @unique
  emailVerified     Boolean             @default(false)
  image             String?             @db.Text
  createdAt         DateTime            @default(now())
  updatedAt         DateTime            @updatedAt
  banExpires        DateTime?
  banReason         String?             @db.Text
  banned            Boolean?            @default(false)
  role              String?             @db.Text
  accounts          Account[]
  sessions          Session[]
  notifications     Notification[]
  orders            Order[]
  spk               SPK[]
  designFiles       DesignFile[]
  penerimaanBarang  PenerimaanBarang[]
  pengeluaranBarang PengeluaranBarang[]
  payments          Payment[]
  jurnalUmum        JurnalUmum[]
  designerOrders    Order[]             @relation("DesignerOrders")
  comments          OrderComment[]

  @@map("user")
}

model Session {
  id             String   @id
  expiresAt      DateTime
  token          String   @unique
  createdAt      DateTime @default(now())
  updatedAt      DateTime @updatedAt
  ipAddress      String?  @db.Text
  userAgent      String?  @db.Text
  userId         String
  impersonatedBy String?  @db.Text
  user           User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("session")
}

model Account {
  id                    String    @id
  accountId             String    @db.Text
  providerId            String    @db.Text
  userId                String
  accessToken           String?   @db.Text
  refreshToken          String?   @db.Text
  idToken               String?   @db.Text
  accessTokenExpiresAt  DateTime?
  refreshTokenExpiresAt DateTime?
  scope                 String?   @db.Text
  password              String?   @db.Text
  createdAt             DateTime  @default(now())
  updatedAt             DateTime  @updatedAt
  user                  User      @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("account")
}

model Verification {
  id         String   @id
  identifier String   @db.Text
  value      String   @db.Text
  expiresAt  DateTime
  createdAt  DateTime @default(now())
  updatedAt  DateTime @updatedAt

  @@index([identifier(length: 191)])
  @@map("verification")
}

// ============================================================
// PRODUK & KATEGORI
// ============================================================

model Category {
  id        String    @id
  nama      String    @db.Text
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  products  Product[]

  @@index([nama(length: 191)])
  @@map("category")
}

model Unit {
  id        String      @id
  nama      String      @db.Text
  createdAt DateTime    @default(now())
  updatedAt DateTime    @updatedAt
  products  Product[]
  bahanBaku BahanBaku[]

  @@index([nama(length: 191)])
  @@map("unit")
}

model Product {
  id         String      @id
  categoryId String
  unitId     String
  sku        String      @unique
  nama       String      @db.Text
  image      String?     @db.Text
  hpp        Decimal     @db.Decimal(10, 2)
  hargaJual  Decimal     @db.Decimal(10, 2)
  stok       Decimal?    @db.Decimal(10, 2)
  minStok    Decimal?    @db.Decimal(10, 2)
  isService  Boolean     @default(false)
  createdAt  DateTime    @default(now())
  updatedAt  DateTime    @updatedAt
  deletedAt  DateTime?
  category   Category    @relation(fields: [categoryId], references: [id], onDelete: Cascade)
  unit       Unit        @relation(fields: [unitId], references: [id], onDelete: Cascade)
  orderItems OrderItem[]

  @@index([sku(length: 191)])
  @@index([nama(length: 191)])
  @@map("product")
}

// ============================================================
// CUSTOMER & SUPPLIER
// ============================================================

model Customer {
  id        String   @id
  nama      String   @db.Text
  nomorHp   String   @db.Text
  image     String?  @db.Text
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  deletedAt DateTime?
  orders    Order[]

  @@index([nama(length: 191)])
  @@map("customer")
}

model Supplier {
  id         String             @id
  nama       String             @db.Text
  nomorHp    String             @db.Text
  email      String?            @db.Text
  image      String?            @db.Text
  alamat     String?            @db.Text
  keterangan String?            @db.Text
  isActive   Boolean            @default(true)
  createdAt  DateTime           @default(now())
  updatedAt  DateTime           @updatedAt
  penerimaan PenerimaanBarang[]

  @@index([nama(length: 191)])
  @@map("supplier")
}

// ============================================================
// BAHAN BAKU & STOK
// ============================================================

model BahanBaku {
  id          String           @id
  unitId      String
  nama        String           @db.Text
  stok        Decimal          @default(0) @db.Decimal(10, 2)
  minStok     Decimal?         @db.Decimal(10, 2)
  keterangan  String?          @db.Text
  isActive    Boolean          @default(true)
  createdAt   DateTime         @default(now())
  updatedAt   DateTime         @updatedAt
  unit        Unit             @relation(fields: [unitId], references: [id], onDelete: Restrict)
  stokMasuk   StokMasuk[]
  stokKeluar  StokKeluar[]

  @@index([nama(length: 191)])
  @@index([unitId])
  @@map("bahan_baku")
}

model PenerimaanBarang {
  id           String      @id
  nomorFaktur  String?     @db.VarChar(100)
  supplierId   String?
  tanggal      DateTime    @default(now())
  keterangan   String?     @db.Text
  buktiNota    String?     @db.Text
  totalTagihan Decimal     @default(0) @db.Decimal(12, 2)
  addedById    String?
  createdAt    DateTime    @default(now())
  updatedAt    DateTime    @updatedAt
  deletedAt    DateTime?
  supplier     Supplier?   @relation(fields: [supplierId], references: [id], onDelete: SetNull)
  addedBy      User?       @relation(fields: [addedById], references: [id], onDelete: SetNull)
  items        StokMasuk[]
  jurnalUmums  JurnalUmum[]

  @@index([supplierId])
  @@index([addedById])
  @@index([tanggal])
  @@map("penerimaan_barang")
}

model StokMasuk {
  id             String           @id
  penerimaanId   String
  bahanBakuId    String
  jumlah         Decimal          @db.Decimal(10, 2)
  hargaBeli      Decimal?         @db.Decimal(10, 2)
  totalHargaItem Decimal?         @db.Decimal(12, 2)
  createdAt      DateTime         @default(now())
  updatedAt      DateTime         @updatedAt
  penerimaan     PenerimaanBarang @relation(fields: [penerimaanId], references: [id], onDelete: Cascade)
  bahanBaku      BahanBaku        @relation(fields: [bahanBakuId], references: [id], onDelete: Restrict)

  @@index([penerimaanId])
  @@index([bahanBakuId])
  @@map("stok_masuk")
}

model StokKeluar {
  id            String            @id
  pengeluaranId String
  bahanBakuId   String
  jumlah        Decimal           @db.Decimal(10, 2)
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
  pengeluaran   PengeluaranBarang @relation(fields: [pengeluaranId], references: [id], onDelete: Cascade)
  bahanBaku     BahanBaku         @relation(fields: [bahanBakuId], references: [id], onDelete: Restrict)

  @@index([pengeluaranId])
  @@index([bahanBakuId])
  @@map("stok_keluar")
}

// ============================================================
// ORDER & PRODUKSI
// ============================================================

model Order {
  id               String           @id
  customerId       String
  userId           String?
  nomorOrder       String           @unique @db.VarChar(50)
  channel          OrderChannel     @default(LANGSUNG)
  statusProduksi   StatusProduksi   @default(PENDING)
  statusPembayaran StatusPembayaran @default(BELUM_BAYAR)
  metodePembayaran MetodePembayaran @default(TUNAI)
  deadline         DateTime?
  catatan          String?          @db.Text
  subtotal         Decimal          @db.Decimal(12, 2)
  diskon           Decimal          @default(0) @db.Decimal(12, 2)
  ongkir           Decimal?         @db.Decimal(12, 2)
  grandTotal       Decimal          @db.Decimal(12, 2)
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  deletedAt        DateTime?
  customer         Customer         @relation(fields: [customerId], references: [id], onDelete: Restrict)
  user             User?            @relation(fields: [userId], references: [id])
  items            OrderItem[]
  designFiles      DesignFile[]
  spk              SPK?
  payments         Payment[]
  designerId       String?
  designer         User?            @relation("DesignerOrders", fields: [designerId], references: [id])
  isDesignFinal    Boolean          @default(false)
  comments         OrderComment[]

  @@index([customerId])
  @@index([userId])
  @@index([nomorOrder])
  @@index([statusPembayaran])
  @@index([createdAt])
  @@map("order")
}

model OrderItem {
  id        String   @id
  orderId   String
  productId String
  nama      String   @db.Text
  harga     Decimal  @db.Decimal(12, 2)
  qty       Decimal  @db.Decimal(10, 2)
  subtotal  Decimal  @db.Decimal(12, 2)
  catatan   String?  @db.Text
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  deletedAt DateTime?
  order     Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  product   Product  @relation(fields: [productId], references: [id], onDelete: Restrict)

  @@index([orderId])
  @@index([productId])
  @@map("order_item")
}

model DesignFile {
  id           String   @id
  orderId      String
  nama         String   @db.Text
  filePath     String   @db.Text
  uploadedById String
  createdAt    DateTime @default(now())
  updatedAt    DateTime @updatedAt
  order        Order    @relation(fields: [orderId], references: [id], onDelete: Cascade)
  uploadedBy   User     @relation(fields: [uploadedById], references: [id], onDelete: Restrict)

  @@index([orderId])
  @@map("design_file")
}

model Karyawan {
  id        String   @id
  nama      String   @db.Text
  nomorHp   String?  @db.Text
  posisi    String?  @db.Text
  isActive  Boolean  @default(true)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt
  spk       SPK[]

  @@index([nama(length: 191)])
  @@map("karyawan")
}

model SPK {
  id            String              @id
  orderId       String              @unique
  nomorSpk      String?             @unique @db.VarChar(50)
  karyawanId    String
  userId        String?
  tahapProduksi StatusProduksi
  model         String?             @db.Text
  tali          String?             @db.Text
  ukuran        String?             @db.Text
  jumlah        Decimal             @db.Decimal(10, 2)
  catatan       String?             @db.Text
  tanggalSetor  DateTime?
  accCetak      Boolean             @default(false)
  accCetakAt    DateTime?
  accCetakOleh  String?             @db.Text
  statusSPK     StatusSPK           @default(DRAFT)
  createdAt     DateTime            @default(now())
  updatedAt     DateTime            @updatedAt
  deletedAt     DateTime?
  order         Order               @relation(fields: [orderId], references: [id], onDelete: Cascade)
  karyawan      Karyawan            @relation(fields: [karyawanId], references: [id], onDelete: Restrict)
  user          User?               @relation(fields: [userId], references: [id])
  pengeluaran   PengeluaranBarang[]

  @@index([karyawanId])
  @@index([tahapProduksi])
  @@map("spk")
}

model PengeluaranBarang {
  id         String       @id
  spkId      String?
  tanggal    DateTime     @default(now())
  keterangan String?      @db.Text
  addedById  String?
  createdAt  DateTime     @default(now())
  updatedAt  DateTime     @updatedAt
  deletedAt  DateTime?
  spk        SPK?         @relation(fields: [spkId], references: [id], onDelete: SetNull)
  addedBy    User?        @relation(fields: [addedById], references: [id], onDelete: SetNull)
  items      StokKeluar[]

  @@index([spkId])
  @@index([addedById])
  @@index([tanggal])
  @@map("pengeluaran_barang")
}

// ============================================================
// FINANCE — PEMBAYARAN (PENDAPATAN)
// ============================================================

model Payment {
  id               String           @id
  orderId          String
  userId           String?
  nominal          Decimal          @db.Decimal(12, 2)
  metodePembayaran MetodePembayaran @default(TUNAI)
  keterangan       String?          @db.Text
  tanggal          DateTime         @default(now())
  createdAt        DateTime         @default(now())
  updatedAt        DateTime         @updatedAt
  deletedAt        DateTime?
  order            Order            @relation(fields: [orderId], references: [id], onDelete: Cascade)
  user             User?            @relation(fields: [userId], references: [id], onDelete: SetNull)
  // Relasi ke jurnal — satu payment menghasilkan 2 baris jurnal
  jurnalUmum       JurnalUmum[]

  @@index([orderId])
  @@index([userId])
  @@index([tanggal])
  @@map("payment")
}

// ============================================================
// FINANCE — CHART OF ACCOUNT (AKUN)
// ============================================================

model Akun {
  id             String          @id
  kodeAkun       String          @unique @db.VarChar(20) // "1-001", "2-001", "4-001"
  namaAkun       String          @db.Text
  // Kelompok akun sesuai Excel: "Aktiva Lancar" | "Kewajiban" | "Modal" | "Pendapatan" | "Beban"
  kelompok       String
  // Posisi normal di neraca
  posisiNormal   PosisiNormal
  isActive       Boolean         @default(true)
  createdAt      DateTime        @default(now())
  updatedAt      DateTime        @updatedAt
  // Semua baris jurnal yang menggunakan akun ini
  jurnalDebet    JurnalUmum[]    @relation("JurnalDebet")
  jurnalKredit   JurnalUmum[]    @relation("JurnalKredit")
  kasBanks       KasBank[]

  appSettings    AppSetting[]    @relation("AkunPendapatanDefault")

  @@index([kodeAkun])
  @@index([kelompok])
  @@map("akun")
}

// ============================================================
// FINANCE — JURNAL UMUM (PUSAT PENCATATAN)
// ============================================================

model JurnalUmum {
  id           String    @id
  ref          String    @db.VarChar(30)
  tanggal      DateTime
  keterangan   String?   @db.Text
  namaBiaya    String    @db.Text
  buktiNota    String?   @db.Text
  akunDebetId  String
  akunKreditId String
  nominal      Decimal   @db.Decimal(12, 2)
  paymentId    String?
  penerimaanId String?
  createdById  String?
  createdAt    DateTime  @default(now())
  deletedAt    DateTime?
  updatedAt    DateTime  @updatedAt

  akunDebet  Akun             @relation("JurnalDebet",  fields: [akunDebetId],  references: [id], onDelete: Restrict)
  akunKredit Akun             @relation("JurnalKredit", fields: [akunKreditId], references: [id], onDelete: Restrict)
  payment    Payment?         @relation(fields: [paymentId],    references: [id], onDelete: SetNull)
  penerimaan PenerimaanBarang? @relation(fields: [penerimaanId], references: [id], onDelete: SetNull)
  createdBy  User?            @relation(fields: [createdById],  references: [id], onDelete: SetNull)

  @@index([tanggal])
  @@index([paymentId])
  @@index([akunDebetId])
  @@index([akunKreditId])
  @@map("jurnal_umum")
}



// ============================================================
// FINANCE — KAS BANK (REKENING)
// ============================================================

model KasBank {
  id            String   @id
  namaRekening  String   @db.Text // "BCA - 1234567890" | "Uang Cash Kasir"
  jenisRekening String   @db.VarChar(20) // "BANK" | "CASH" | "EWALLET"
  nomorRekening String?  @db.VarChar(50)
  // Relasi ke Akun Buku Besar (agar selaras dengan saldo Neraca)
  akunId        String?
  isActive      Boolean  @default(true)
  createdAt     DateTime @default(now())
  updatedAt     DateTime @updatedAt
  akun          Akun?    @relation(fields: [akunId], references: [id], onDelete: SetNull)

  @@index([akunId])
  @@index([jenisRekening])
  @@map("kas_bank")
}

// ============================================================
// ENUMS — EXISTING
// ============================================================

enum StatusSPK {
  DRAFT
  AKTIF
  SELESAI
  REVISI
  BATAL
}

enum OrderChannel {
  LANGSUNG
  WHATSAPP
  INSTAGRAM
  MARKETPLACE
  WEBSITE
  LAINNYA
}

enum StatusProduksi {
  PENDING
  DESAIN
  PRODUKSI
  PACKING
  SELESAI
  BATAL
}

enum StatusPembayaran {
  BELUM_BAYAR
  DP
  LUNAS
  REFUND
}

enum MetodePembayaran {
  TUNAI
  TRANSFER
  QRIS
  KREDIT
  LAINNYA
}

// ============================================================
// ENUMS — FINANCE (BARU)
// ============================================================

enum PosisiNormal {
  DEBET
  KREDIT
}

// ============================================================
// SYSTEM SETTINGS (PENGATURAN WEB)
// ============================================================

model AppSetting {
  id                      Int      @id @default(1) // Selalu 1 untuk single-row table
  
  namaPerusahaan          String   @default("CV. Haqi Koleksi") @db.VarChar(100)
  logoUrl                 String?  @db.Text // Path gambar/URL logo perusahaan jika nilai null maka tampilkan icon 
  alamat                  String?  @db.Text
  nomorKontak             String?  @db.VarChar(50)
  email                   String?  @db.VarChar(100)
  
  prefixOrder             String   @default("INV-HQ-") @db.VarChar(20)
  catatanKakiStruk        String?  @db.Text // Syarat & Ketentuan di bawah nota
  
  prefixSpk               String   @default("SPK-") @db.VarChar(20)
  estimasiHariPengerjaan  Int      @default(14) // Penambahan hari otomatis untuk deadline
  
  // Ke mana uang pesanan baju otomatis dimasukkan dalam Jurnal
  defaultPendapatanAkunId String?

  // Rekening yang ditampilkan di invoice (JSON array of KasBank IDs)
  invoiceRekeningIds      String?  @db.Text
  
  createdAt               DateTime @default(now())
  updatedAt               DateTime @updatedAt

  // Relasi ke tabel Akun
  akunPendapatan          Akun?    @relation("AkunPendapatanDefault", fields: [defaultPendapatanAkunId], references: [id], onDelete: SetNull)

  @@map("app_setting")
}

// ============================================================
// SYSTEM — NOTIFIKASI
// ============================================================

model Notification {
  id        String     @id @default(cuid())
  userId    String
  title     String     @db.VarChar(100)
  message   String     @db.Text
  jenis     JenisNotif
  isRead    Boolean    @default(false)
  linkUrl   String?    @db.Text
  createdAt DateTime   @default(now())
  updatedAt DateTime   @updatedAt
  user      User       @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([isRead])
  @@map("notification")
}

enum JenisNotif {
  ORDER_BARU
  STATUS_ORDER_UBAH
  DEADLINE_DEKAT
  STOK_MENIPIS
  PENERIMAAN_BARU
  PAYMENT_MASUK
  BIAYA_DICATAT
  SISTEM
}

model OrderComment {
  id        String             @id @default(cuid())
  orderId   String
  userId    String
  text      String             @db.Text
  createdAt DateTime           @default(now())
  updatedAt DateTime           @updatedAt
  order     Order              @relation(fields: [orderId], references: [id], onDelete: Cascade)
  user      User               @relation(fields: [userId], references: [id], onDelete: Restrict)
  files     OrderCommentFile[]

  @@index([orderId])
  @@index([userId])
  @@map("order_comment")
}

model OrderCommentFile {
  id        String       @id @default(cuid())
  commentId String
  filePath  String       @db.Text
  createdAt DateTime     @default(now())
  comment   OrderComment @relation(fields: [commentId], references: [id], onDelete: Cascade)

  @@index([commentId])
  @@map("order_comment_file")
}
