@startuml ClassDiagram_POS
skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor LightBlue
  BorderColor DarkBlue
  ArrowColor Navy
}

class User {
  +id: String
  +name: String
  +email: String
  +role: String
  +createdAt: DateTime
}

class Customer {
  +id: String
  +nama: String
  +nomorHp: String
  +deletedAt: DateTime
}

class Supplier {
  +id: String
  +nama: String
  +nomorHp: String
  +isActive: Boolean
}

class Category {
  +id: String
  +nama: String
}

class Unit {
  +id: String
  +nama: String
}

class Product {
  +id: String
  +sku: String
  +nama: String
  +hpp: Decimal
  +hargaJual: Decimal
  +stok: Decimal
  +minStok: Decimal
  +isService: Boolean
  +deletedAt: DateTime
  --
  +checkStock(): Boolean
  +updateStock(): void
}

class Order {
  +id: String
  +nomorOrder: String
  +channel: OrderChannel
  +statusProduksi: StatusProduksi
  +statusPembayaran: StatusPembayaran
  +metodePembayaran: MetodePembayaran
  +subtotal: Decimal
  +diskon: Decimal
  +grandTotal: Decimal
  +deadline: DateTime
  +deletedAt: DateTime
  --
  +updateStatus(): void
  +calculateTotal(): Decimal
}

class OrderItem {
  +id: String
  +nama: String
  +harga: Decimal
  +qty: Decimal
  +subtotal: Decimal
  --
  +calculateSubtotal(): Decimal
}

class DesignFile {
  +id: String
  +nama: String
  +filePath: String
}

class Karyawan {
  +id: String
  +nama: String
  +posisi: String
  +isActive: Boolean
}

class SPK {
  +id: String
  +nomorSpk: String
  +tahapProduksi: StatusProduksi
  +statusSPK: StatusSPK
  +model: String
  +ukuran: String
  +jumlah: Decimal
  +accCetak: Boolean
  +deletedAt: DateTime
  --
  +updateStatus(): void
  +approveForPrint(): void
}

class BahanBaku {
  +id: String
  +nama: String
  +stok: Decimal
  +minStok: Decimal
  +isActive: Boolean
  --
  +checkStokMinimum(): Boolean
  +updateStok(): void
}

class PenerimaanBarang {
  +id: String
  +nomorFaktur: String
  +tanggal: DateTime
  +totalTagihan: Decimal
  +deletedAt: DateTime
  --
  +receive(): void
}

class StokMasuk {
  +id: String
  +jumlah: Decimal
  +hargaBeli: Decimal
  +totalHargaItem: Decimal
}

class PengeluaranBarang {
  +id: String
  +tanggal: DateTime
  +keterangan: String
  +deletedAt: DateTime
}

class StokKeluar {
  +id: String
  +jumlah: Decimal
}

class Payment {
  +id: String
  +nominal: Decimal
  +metodePembayaran: MetodePembayaran
  +tanggal: DateTime
  +keterangan: String
  +deletedAt: DateTime
  --
  +processPayment(): void
  +generateJurnal(): void
}

class Akun {
  +id: String
  +kodeAkun: String
  +namaAkun: String
  +kelompok: String
  +posisiNormal: PosisiNormal
  +isActive: Boolean
  --
  +getSaldo(): Decimal
}

class JurnalUmum {
  +id: String
  +ref: String
  +tanggal: DateTime
  +namaBiaya: String
  +nominal: Decimal
  +deletedAt: DateTime
  --
  +createDoubleEntry(): void
}

class KasBank {
  +id: String
  +namaRekening: String
  +jenisRekening: String
  +nomorRekening: String
  +isActive: Boolean
}

' Relasi User
User "1" --> "0..*" Order : membuat
User "1" --> "0..*" Payment : mencatat
User "1" --> "0..*" SPK : membuat

' Relasi Order
Customer "1" --> "0..*" Order : melakukan
Order "1" *-- "1..*" OrderItem : berisi
Order "1" --> "0..*" Payment : memiliki
Order "1" --> "0..1" SPK : memiliki
Order "1" --> "0..*" DesignFile : memiliki
OrderItem "0..*" --> "1" Product : mengacu

' Relasi Produk & Master
Product "0..*" --> "1" Category : termasuk
Product "0..*" --> "1" Unit : satuan
BahanBaku "0..*" --> "1" Unit : satuan

' Relasi Produksi
SPK "0..*" --> "1" Karyawan : dikerjakan
SPK "1" --> "0..*" PengeluaranBarang : menghasilkan
PengeluaranBarang "1" *-- "1..*" StokKeluar : berisi
StokKeluar "0..*" --> "1" BahanBaku : mengurangi

' Relasi Inventori
PenerimaanBarang "1" *-- "1..*" StokMasuk : berisi
PenerimaanBarang "0..*" --> "0..1" Supplier : dari
StokMasuk "0..*" --> "1" BahanBaku : menambah

' Relasi Keuangan
Payment "1" --> "0..*" JurnalUmum : dicatat
JurnalUmum "0..*" --> "1" Akun : debet
JurnalUmum "0..*" --> "1" Akun : kredit
KasBank "0..*" --> "0..1" Akun : terhubung

@enduml
